WIP: complete blob exchange and prove streaming and resumable migration