@@ -4,7 +4,10 @@
  */
 package ai.singlr.sail.store;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import ai.singlr.sail.config.YamlUtil;
 import ai.singlr.sail.sync.SyncBox;
@@ -23,7 +26,7 @@ class ContentMigrationTest {
       legacy(db);
       var revision = new SpecStore(db).latestRev("a");
       var migration = new ContentMigration();
-      var report = migration.apply(db, null, Prompter());
+      var report = migration.apply(db, null, prompter());
       assertTrue(report.applied() >= 2);
       assertEquals(revision, new SpecStore(db).latestRev("a"));
       assertEquals("body", new SpecStore(db).getContent("a").orElseThrow().body());
@@ -47,7 +50,7 @@ class ContentMigrationTest {
         }
       }
       blobs.gc(java.util.Set.of());
-      assertEquals(0, migration.apply(db, null, Prompter()).applied());
+      assertEquals(0, migration.apply(db, null, prompter()).applied());
       assertTrue(
           db.query(
                   "SELECT 1 FROM pragma_table_info('project_files') WHERE name = 'content'",
@@ -67,7 +70,7 @@ class ContentMigrationTest {
       first.execute(
           "CREATE TRIGGER interrupt_migration BEFORE UPDATE OF body_hash ON specs WHEN NEW.id = 'z' BEGIN SELECT RAISE(ABORT, 'interrupted'); END");
       assertThrows(
-          RuntimeException.class, () -> new ContentMigration().apply(first, null, Prompter()));
+          RuntimeException.class, () -> new ContentMigration().apply(first, null, prompter()));
       assertTrue(
           first
               .queryOne("SELECT body_hash FROM specs WHERE id = 'a'", r -> !r.isNull(0))
@@ -77,7 +80,7 @@ class ContentMigrationTest {
               .queryOne("SELECT body_hash FROM specs WHERE id = 'z'", r -> r.isNull(0))
               .orElseThrow());
       first.execute("DROP TRIGGER interrupt_migration");
-      new ContentMigration().apply(second, null, Prompter());
+      new ContentMigration().apply(second, null, prompter());
       assertEquals("body", new SpecStore(second).getContent("a").orElseThrow().body());
       assertEquals("", new SpecStore(second).getContent("z").orElseThrow().body());
     }
@@ -94,7 +97,116 @@ class ContentMigrationTest {
     }
   }
 
-  private static DataMigration.Prompter Prompter() {
+  @Test
+  void aSecondProcessResumesAfterTheFirstIsKilledMidMigration() throws Exception {
+    var path = dir.resolve("processes.db");
+    try (var db = Sqlite.open(path)) {
+      new SchemaManager(db).migrate();
+      db.execute(
+          "INSERT INTO data_migrations (name, applied_at) VALUES (?, 'test')",
+          LegacyDataMigration.NAME);
+      db.transaction(
+          () -> {
+            for (var i = 0; i < 2000; i++) {
+              var id = "entity-" + i;
+              db.execute(
+                  "INSERT INTO specs (id, title, project, status, created_at, updated_at) VALUES (?, ?, 'proj', 'pending', 'now', 'now')",
+                  id,
+                  id);
+              db.execute(
+                  "INSERT INTO spec_content (spec_id, body, plan, updated_at) VALUES (?, ?, '', 'now')",
+                  id,
+                  "body".repeat(8192) + i);
+            }
+          });
+    }
+    var firstLog = dir.resolve("first.log");
+    var secondLog = dir.resolve("second.log");
+    var first = migrationProcess(path, firstLog);
+    Process second = null;
+    try (var observer = Sqlite.open(path)) {
+      var deadline = System.nanoTime() + java.util.concurrent.TimeUnit.SECONDS.toNanos(20);
+      long migrated;
+      do {
+        migrated =
+            observer
+                .queryOne(
+                    "SELECT COUNT(*) FROM specs WHERE body_hash IS NOT NULL", row -> row.integer(0))
+                .orElseThrow();
+        if (migrated >= 5) break;
+        Thread.sleep(1);
+      } while (first.isAlive() && System.nanoTime() < deadline);
+      assertTrue(migrated >= 5 && migrated < 2000, "must interrupt between entity commits");
+      assertEquals(
+          0, new ProcessBuilder("kill", "-STOP", Long.toString(first.pid())).start().waitFor());
+      second = migrationProcess(path, secondLog);
+      assertTrue(first.isAlive());
+      first.destroyForcibly();
+      assertTrue(first.waitFor(10, java.util.concurrent.TimeUnit.SECONDS));
+      assertTrue(second.waitFor(30, java.util.concurrent.TimeUnit.SECONDS));
+      assertEquals(0, second.exitValue(), () -> readLog(secondLog));
+      assertEquals(
+          2000,
+          observer
+              .queryOne(
+                  "SELECT COUNT(*) FROM specs WHERE body_hash IS NOT NULL AND plan_hash IS NOT NULL",
+                  row -> row.integer(0))
+              .orElseThrow());
+      assertEquals(
+          1,
+          observer
+              .queryOne(
+                  "SELECT COUNT(*) FROM data_migrations WHERE name = ?",
+                  row -> row.integer(0),
+                  ContentMigration.NAME)
+              .orElseThrow());
+      assertEquals(
+          "body".repeat(8192) + 1999,
+          new SpecStore(observer).getContent("entity-1999").orElseThrow().body());
+      assertEquals(0, new ContentMigration().apply(observer, null, prompter()).applied());
+    } finally {
+      first.destroyForcibly();
+      if (second != null) second.destroyForcibly();
+    }
+  }
+
+  private Process migrationProcess(Path path, Path log) throws java.io.IOException {
+    return new ProcessBuilder(
+            Path.of(System.getProperty("java.home"), "bin", "java").toString(),
+            "--enable-native-access=ALL-UNNAMED",
+            "-cp",
+            System.getProperty("surefire.test.class.path", System.getProperty("java.class.path")),
+            MigrationProcess.class.getName(),
+            path.toString())
+        .redirectErrorStream(true)
+        .redirectOutput(log.toFile())
+        .start();
+  }
+
+  private static String readLog(Path path) {
+    try {
+      return java.nio.file.Files.readString(path);
+    } catch (java.io.IOException e) {
+      return e.toString();
+    }
+  }
+
+  public static final class MigrationProcess {
+    public static void main(String[] args) {
+      try (var database =
+          ai.singlr.sail.sync.SyncDatabase.converge(Path.of(args[0]), "migrating")) {
+        if (database
+                .db()
+                .queryOne(
+                    "SELECT COUNT(*) FROM specs WHERE body_hash IS NULL OR plan_hash IS NULL",
+                    row -> row.integer(0))
+                .orElseThrow()
+            != 0) throw new AssertionError("sync database exposed unmigrated content");
+      }
+    }
+  }
+
+  private static DataMigration.Prompter prompter() {
     return DataMigration.Prompter.NON_INTERACTIVE;
   }
 
